--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -6,8 +6,13 @@ on:
 
 jobs:
   quality-checks:
-    runs-on: ubuntu-20.04
 
+    runs-on: ${{ matrix.operating-system }}
+      strategy:
+        matrix:
+          operating-system: [ ubuntu-latest ]
+          php: [ '7.4' ]
+    name: PHP ${{ matrix.php }} sample
     steps:
     - uses: actions/checkout@v2
 
